[package]
name = "sepulcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
derive_more = "0.99.17"
twox-hash = "1.6.3"
rand = "0.8"
serde_json = "1.0.81"
serde = { version = "1.0.137", features = ["derive"] }
async-std = "1.11.0"
