[package]
name = "pyre"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
derive_more = "0.99.17"
twox-hash = "1.6.3"
rand = "0.8"
serde_json = "1.0.81"
serde = { version = "1.0.137", features = ["derive"] }
ticker = "0.1.1"
tracing = "0.1.35"
tracing-subscriber = { version = "0.3.11", features = ["json"]}
tokio = { version = "1.20", features = ["full", "time", "test-util"] }
